// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect component with checkbox false should render correctly with all the props given 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
  cursor: not-allowed;
  background-color: #F7F8F9;
  border-color: #C7D0D8;
}

.c3 .c6 {
  color: #566c82;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #566c82;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #566c82;
}

.c3 ~ .sc-AxirZ {
  color: #566c82;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  height: 0.2rem;
}

.c3:hover {
  border-color: #C7D0D8;
}

.c3::after,
.c3:hover::after {
  height: 0.1rem;
  background-color: #C7D0D8;
}

.c3 input {
  color: #435465;
}

.c3 .c6 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #b0bcc8;
}

.c3 ~ .sc-AxirZ {
  color: #b0bcc8;
}

.c3 * {
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 300;
  width: 100%;
  margin: 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

<div>
  <div
    class="c0"
    disabled=""
    id="pharmacy-wrapper"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
        disabled=""
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="pharmacy-helper-text"
            autocomplete="off"
            class="c5"
            disabled=""
            id="pharmacy-input"
            placeholder="Please Select"
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="pharmacy-input"
          >
            Pharmacy
          </label>
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>

    </div>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox false should render correctly with default props 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c3 .c6 {
  color: #566c82;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #566c82;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #566c82;
}

.c3 ~ .sc-AxirZ {
  color: #566c82;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  height: 0.2rem;
}

.c3:focus-within,
.c3:focus-within:hover {
  border-color: #005AEE;
  background-color: #e6effd;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  background-color: #005AEE;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #005AEE;
}

.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb,
.c3:focus-within .c9,
.c3:focus-within:hover .c9 {
  color: #005AEE;
}

.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb *,
.c3:focus-within .c9 *,
.c3:focus-within:hover .c9 * {
  fill: #005AEE;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1:focus-within input {
  cursor: text;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c0 .c1:not(:focus-within):hover .c9 * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
    id="medly-multiSelect-wrapper"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-multiSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-multiSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="medly-multiSelect-input"
          />
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>

    </div>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox true should render correctly with all the props given 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
  cursor: not-allowed;
  background-color: #F7F8F9;
  border-color: #C7D0D8;
}

.c3 .c6 {
  color: #566c82;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #566c82;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #566c82;
}

.c3 ~ .sc-AxirZ {
  color: #566c82;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  height: 0.2rem;
}

.c3:hover {
  border-color: #C7D0D8;
}

.c3::after,
.c3:hover::after {
  height: 0.1rem;
  background-color: #C7D0D8;
}

.c3 input {
  color: #435465;
}

.c3 .c6 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #b0bcc8;
}

.c3 ~ .sc-AxirZ {
  color: #b0bcc8;
}

.c3 * {
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 300;
  width: 100%;
  margin: 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

<div>
  <div
    class="c0"
    disabled=""
    id="pharmacy-wrapper"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
        disabled=""
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="pharmacy-helper-text"
            autocomplete="off"
            class="c5"
            disabled=""
            id="pharmacy-input"
            placeholder="Please Select"
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="pharmacy-input"
          >
            Pharmacy
          </label>
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>

    </div>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox true should render correctly with default props 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c3 .c6 {
  color: #566c82;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #566c82;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #566c82;
}

.c3 ~ .sc-AxirZ {
  color: #566c82;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  height: 0.2rem;
}

.c3:focus-within,
.c3:focus-within:hover {
  border-color: #005AEE;
  background-color: #e6effd;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  background-color: #005AEE;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #005AEE;
}

.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb,
.c3:focus-within .c9,
.c3:focus-within:hover .c9 {
  color: #005AEE;
}

.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb *,
.c3:focus-within .c9 *,
.c3:focus-within:hover .c9 * {
  fill: #005AEE;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1:focus-within input {
  cursor: text;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c0 .c1:not(:focus-within):hover .c9 * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
    id="medly-multiSelect-wrapper"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-multiSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-multiSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="medly-multiSelect-input"
          />
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>

    </div>
  </div>
</div>
`;
